# scrapinghorse

./: .env.example  .gitignore  README.md  cleanup.sh  original_scrape_ai_mode.py  requirements.txt  server.py  start_server.sh  test.py
app/: server.py
app/tests/: test.py
app/utils/: ai_mode_parser.py  queue.py  scrape_ai_mode.py
gateway/: main.py  pyproject.toml
gateway/v1/: auth.py  modal_config.py  rate_limiter.py
gateway/v1/routes/: gateway.py  public.py
gateway/v1/schemas/: api.py
scripts/oxylabs_proxy_extension/: background.js  manifest.json
