[project]
name = "gateway"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "modal>=1.1.4",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]
